--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -17,27 +17,26 @@
     "internet": "Интернет",
     "marketing": "Маркетинг",
     "for_your_business": "Для Вашего бизнеса и личного бренда",
-    "advertising_agency": "Мы оказываем премиальные услуги <br \\/>В области Digital-Маркетинга <br \\/>С нами приятно работать <br \\/>И зарабатывать.",
+    "advertising_agency": "Мы оказываем премиальные услуги <br \\/>В области Digital-Маркетинга. <br \\/>С нами приятно работать <br \\/>И зарабатывать",
     "about": {
       "name": "О нас",
-      "desc": "Мы - маркетинговое агентство полного цикла. Наша команда соединяет стратегию, креатив и аналитику, чтобы ваш бизнес развивался быстрее конкурентов. Мы понимаем рынок и говорим на языке цифр, а не обещаний."
+      "desc": "Мы - маркетинговое агентство полного цикла. <br \\/>Наша команда соединяет стратегию, креатив и аналитику, <br \\/>чтобы ваш бизнес развивался быстрее конкурентов. <br \\/>Мы понимаем рынок и говорим на языке цифр, а не обещаний"
     },
     "about_1": {
-      "name": "В digital-индустрии",
-      "desc": "Это наш фундамент. Мы прошли вместе с рынком путь от первых SMM-экспериментов до продвинутой аналитики и автоматизации. Теперь этот опыт работает на вас."
+      "name": "В Digital-индустрии",
+      "desc": "И это наш фундамент. Мы прошли вместе с рынком путь от первых <br \\/>Digital-экспериментов до продвинутой аналитики и автоматизации. <br \\/>Теперь этот опыт работает на вас"
     },
     "about_2": {
       "name": "Реализованных проектов в 5 странах",
-      "desc": "За это время мы накопили практический опыт работы в разных нишах и с компаниями любого масштаба - от локальных стартапов до международных брендов."
+      "desc": "За это время мы накопили опыт работы в разных нишах <br \\/>с компаниями любого масштаба - от локальных стартапов <br \\/>до международных брендов"
     },
     "about_3": {
       "name": "Индекс удовлетворенности заказчиков",
-      "desc": "Этот показатель - результат индивидуального подхода и полного погружения в каждый проект",
-      "notice": "* согласно проведенному исследованию Oyster Computer от 24.11.2023"
+      "desc": "Этот показатель - результат индивидуального подхода <br \\/>и полного погружения в каждый проект"
     },
     "case_1": {
-      "name": "WATCHBOX",
-      "desc": "Лидогенерация (Ближний Восток)"
+      "name": "THE 1916 COMPANY <br \\/>(EX WATCHBOX)",
+      "desc": "Лидогенерация <br \\/>(Ближний Восток)"
     },
     "case_2": {
       "name": "YouDo",
@@ -45,11 +44,11 @@
     },
     "case_3": {
       "name": "CETUS",
-      "desc": "Проведение маркетинговой кампании с элементами онбординга"
+      "desc": "Проведение маркетинговой кампании <br \\/>с элементами онбординга"
     },
     "case_4": {
       "name": "ALLU Auction",
-      "desc": "Лидогенерация (ОАЭ и Гонконг)"
+      "desc": "Лидогенерация <br \\/>(ОАЭ и Гонконг)"
     },
     "case_5": {
       "name": "GATE",
@@ -65,49 +64,57 @@
     },
     "case_8": {
       "name": "AX CAPITAL",
-      "desc": "Лидогенерация (Страны СНГ)"
+      "desc": "Лидогенерация <br \\/>(Страны СНГ)"
     },
     "service": {
       "name": "Услуги",
-      "desc": "Полный перечень маркетинговых инструментов и практик для масштабирования вашего бизнеса и продвижения личного бренда"
+      "desc": "Полный перечень маркетинговых инструментов и практик для масштабирования вашего бизнеса <br \\/>и продвижения личного бренда"
     },
     "service_1": {
-      "name": "Продвижение в сети",
-      "desc": "Социальные сети, лидогенерация, (контекст, таргет), управление репутацией в сети, PR, рассылка и другие инструменты"
+      "name1": "Продвижение",
+      "name2": "в сети",
+      "desc": "Социальные сети, лидогенерация, <br \\/>(контекст, таргет), управление <br \\/>репутацией в сети, PR, рассылка <br \\/>и другие инструменты"
     },
     "service_2": {
-      "name": "Разработка полного цикла",
-      "desc": "Сайты, мобильные приложения, CRM-системы, Telegram-боты, Web-дизайн, презентацтии"
+      "name1": "Разработка",
+      "name2": "полного цикла",
+      "desc": "Сайты, мобильные приложения, <br \\/>CRM-системы, Telegram-боты, <br \\/>Web-дизайн, презентацтии"
     },
     "service_3": {
-      "name": "Создание авторского контента",
-      "desc": "Тематический копирайтинг, фото/видео контент, ИИ-контент"
+      "name1": "Создание",
+      "name2": "авторского контента",
+      "desc": "Тематический копирайтинг, <br \\/>фото/видео контент, ИИ-контент"
     },
     "service_4": {
-      "name": "Диджитал консалтинг",
-      "desc": "Маркентинговая стратегия, автоматизация процессов, обучение сотрудников"
+      "name1": "Диджитал",
+      "name2": "консалтинг",
+      "desc": "Маркентинговая стратегия, <br \\/>автоматизация процессов, <br \\/>обучение сотрудников"
     },
     "team": {
-      "name": "Присоединяйся к команде",
-      "desc": "Экспертиза в области цифрового маркетинга позволяет нам быстро принимать решения и демонстрировать серьезные результаты. У нас есть открытые вакансии. Оставьте заявку со своими контактными данными, чтобы узнать больше."
+      "name": "Присоединяйся <br \\/>к команде",
+      "desc": "Экспертиза в области цифрового маркетинга <br \\/>позволяет нам быстро принимать решения <br \\/>и демонстрировать серьезные результаты. <br \\/>У нас есть открытые вакансии. Оставьте заявку <br \\/>со своими  данными, чтобы узнать больше"
     }
   },
   "partner": {
     "frame_1": {
-      "name": "Нас рекомендуют",
-      "desc": "Работаем как с крупными компаниями, так и со стартапами."
+      "name1": "Нас",
+      "name2": "рекомендуют",
+      "desc": "Работаем как с крупными компаниями, <br \\/>так и со стартапами"
     },
     "frame_2": {
-      "name": "Комплексный подход",
-      "desc": "От стратегии и брендинга до лидогенерации и аналитики - мы закрываем полный цикл диджитал-маркетинга."
+      "name1": "Комплексный",
+      "name2": "подход",
+      "desc": "От стратегии и брендинга до лидогенерации <br \\/>и аналитики - мы закрываем полный цикл <br \\/>диджитал-маркетинга"
     },
     "frame_3": {
-      "name": "Максимальная вовлеченность в проект",
-      "desc": "Полное погружение в тематику Вашего бизнеса для лучшей результативности."
+      "name1": "Максимальная",
+      "name2": "вовлеченность <br \\/>в проект",
+      "desc": "Полное погружение в тематику бизнеса <br \\/>для лучшей результативности"
     },
     "frame_4": {
-      "name": "Индивидуальные решения",
-      "desc": "Каждый проект уникален. Мы не используем шаблонные решения, а разрабатываем стратегию, которая будет работать именно для вашего бизнеса."
+      "name1": "Индивидуальные",
+      "name2": "решения",
+      "desc": "Каждый проект уникален. <br \\/>Мы не используем шаблонные решения, <br \\/>а разрабатываем стратегию, которая <br \\/>будет работать именно для вашего бизнеса"
     }
   },
   "feedback": {
@@ -117,8 +124,7 @@
     "form": {
       "name": "ВАШЕ ИМЯ *",
       "phone": "ВАШ НОМЕР ТЕЛЕФОНА *",
-      "agreement": "ДАЮ СОГЛАСИЕ",
-      "agreement_desc": "НА ОБРАБОТКУ ПЕРСОНАЛЬНЫХ ДАННЫХ",
+      "agreement": "ДАЮ СОГЛАСИЕ <br \\/>НА ОБРАБОТКУ ПЕРСОНАЛЬНЫХ ДАННЫХ",
       "send": "Отправить"
     }
   },
@@ -137,7 +143,7 @@
     "content": "Контент",
     "leads": "Лиды",
     "consulting": "Консалтинг",
-    "research": "Рисерч",
+    "research": "Ресерч",
     "automation": "Автоматизация",
     "target": "Таргет"
   }
