--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -20,7 +20,7 @@
     "advertising_agency": "Мы оказываем <br \\/>премиальные услуги <br \\/>В области <br \\/>Digital-Маркетинга. <br \\/>С нами приятно работать <br \\/>И зарабатывать",
     "about": {
       "name": "О нас",
-      "desc": "Мы - маркетинговое агентство полного цикла. <br \\/>Наша команда соединяет стратегию, креатив и аналитику, <br \\/>чтобы ваш бизнес развивался быстрее конкурентов. <br \\/>Мы понимаем рынок и говорим на языке цифр, а не обещаний"
+      "desc": "Мы - маркетинговое агентство полного цикла. <br \\/>Наша команда соединяет стратегию, креатив и аналитику, <br \\/>чтобы ваш бизнес развивался быстрее конкурентов. <br \\/>Мы понимаем рынок и говорим на языке цифр, <br \\/>а не обещаний"
     },
     "about_1": {
       "name": "В Digital-индустрии",
@@ -43,7 +43,7 @@
       "desc": "Создание программного обеспечения"
     },
     "case_3": {
-      "name": "CETUS",
+      "name": "CETUS PROTOCOL",
       "desc": "Проведение маркетинговой кампании <br \\/>с элементами онбординга"
     },
     "case_4": {
@@ -51,7 +51,7 @@
       "desc": "Лидогенерация <br \\/>(ОАЭ и Гонконг)"
     },
     "case_5": {
-      "name": "GATE",
+      "name": "GATE WEB3",
       "desc": "Проведение маркетинговой кампании"
     },
     "case_6": {
@@ -59,7 +59,7 @@
       "desc": "Создание презентаций финансовых продуктов"
     },
     "case_7": {
-      "name": "WISE TRANSFER",
+      "name": "WISE",
       "desc": "Проведение маркетинговой кампании"
     },
     "case_8": {
@@ -72,22 +72,22 @@
     },
     "service_1": {
       "name1": "Продвижение",
-      "name2": "в сети",
-      "desc": "Социальные сети, лидогенерация, <br \\/>(контекст, таргет), управление <br \\/>репутацией в сети, PR, рассылка <br \\/>и другие инструменты"
+      "name2": "В сети",
+      "desc": "Социальные сети, лидогенерация, <br \\/>(контекст, таргет), управление <br \\/>репутацией в сети, PR, рассылки <br \\/>и другие инструменты"
     },
     "service_2": {
       "name1": "Разработка",
       "name2": "полного цикла",
-      "desc": "Сайты, мобильные приложения, <br \\/>CRM-системы, Telegram-боты, <br \\/>Web-дизайн, презентацтии"
+      "desc": "Сайты, мобильные приложения, <br \\/>CRM-системы, Telegram-боты, <br \\/>Web-дизайн, презентации"
     },
     "service_3": {
       "name1": "Создание",
-      "name2": "авторского контента",
-      "desc": "Тематический копирайтинг, <br \\/>фото/видео контент, ИИ-контент"
+      "name2": "Авторского контента",
+      "desc": "Тематический копирайтинг, <br \\/>фото- и видеовидео контент, <br \\/>ИИ-Контент"
     },
     "service_4": {
       "name1": "Диджитал",
-      "name2": "консалтинг",
+      "name2": "Консалтинг",
       "desc": "Маркентинговая стратегия, <br \\/>автоматизация процессов, <br \\/>обучение сотрудников"
     },
     "team": {
@@ -97,23 +97,19 @@
   },
   "partner": {
     "frame_1": {
-      "name1": "Нас",
-      "name2": "рекомендуют",
+      "name": "Нас <br/><span class=\"text-primary\">рекомендуют</span>",
       "desc": "Работаем как с крупными компаниями, <br \\/>так и со стартапами"
     },
     "frame_2": {
-      "name1": "Комплексный",
-      "name2": "подход",
+      "name": "<span class=\"text-primary\">Комплексный</span><br/>подход",
       "desc": "От стратегии и брендинга до лидогенерации <br \\/>и аналитики - мы закрываем полный цикл <br \\/>диджитал-маркетинга"
     },
     "frame_3": {
-      "name1": "Максимальная",
-      "name2": "вовлеченность <br \\/>в проект",
+      "name": "<span class=\"text-primary\">Максимальная <br/>вовлеченность</span><br/>в проект",
       "desc": "Полное погружение в тематику бизнеса <br \\/>для лучшей результативности"
     },
     "frame_4": {
-      "name1": "Индивидуальные",
-      "name2": "решения",
+      "name": "<span class=\"text-primary\">Индивидуальные</span><br/>решения",
       "desc": "Каждый проект уникален. <br \\/>Мы не используем шаблонные решения, <br \\/>а разрабатываем стратегию, которая <br \\/>будет работать именно для вашего бизнеса"
     }
   },
@@ -125,7 +121,21 @@
       "name": "ВАШЕ ИМЯ *",
       "phone": "ВАШ НОМЕР ТЕЛЕФОНА *",
       "agreement": "ДАЮ СОГЛАСИЕ <br \\/>НА ОБРАБОТКУ ПЕРСОНАЛЬНЫХ ДАННЫХ",
-      "send": "Отправить"
+      "send": "Отправить",
+      "field_error": {
+        "name": "Укажите имя",
+        "phone": "Введите минимум 10 цифр",
+        "telegram": "Допускается английский текст без пробелов",
+        "agreement": "Необходимо согласие на условия обработки данных"
+      },
+      "success": {
+        "title": "Успешно!",
+        "desc": "Персональный ассистент свяжется с Вами в ближайшее время"
+      },
+      "error": {
+        "title": "Что-то пошло не так :(",
+        "desc": "Попробуйте повторно отправить отправить форму"
+      }
     }
   },
   "text": {
