--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -139,6 +139,8 @@
     }
   },
   "text": {
+    "page_not_found": "Страница не найдена",
+    "go_back_home": "Вернуться на главную",
     "close": "Закрыть",
     "lets_discuss": "Свяжитесь с нами",
     "write_to_us": "Напишите нам",
