upd fonts, margin, text

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -97,19 +97,19 @@
   },
   "partner": {
     "frame_1": {
-      "name": "Highly <br/><span class=\"text-primary\">Recommended</span>",
+      "name": "Highly <br/><span class=\"text-accent\">Recommended</span>",
       "desc": "We work with both large enterprises <br \\/>and startups"
     },
     "frame_2": {
-      "name": "<span class=\"text-primary\">Comprehensive</span><br/>Approach",
+      "name": "<span class=\"text-accent\">Comprehensive</span><br/>Approach",
       "desc": "From strategy and branding to lead generation <br \\/>and analytics - we cover the full <br \\/>digital marketing cycle"
     },
     "frame_3": {
-      "name": "<span class=\"text-primary\">Maximum <br/>involvement</span><br/>in the project",
+      "name": "<span class=\"text-accent\">Maximum <br/>involvement</span><br/>in the project",
       "desc": "Complete immersion in your business niche <br \\/>for maximum effectiveness"
     },
     "frame_4": {
-      "name": "<span class=\"text-primary\">Tailored</span><br/>Solutions",
+      "name": "<span class=\"text-accent\">Tailored</span><br/>Solutions",
       "desc": "Every project is unique. <br \\/>We avoid cookie-cutter solutions <br \\/>and develop a strategy that works <br \\/>specifically for your business"
     }
   },
@@ -123,10 +123,10 @@
       "agreement": "I CONSENT <br \\/>FOR PROCESSING PERSONAL DATA",
       "send": "Submit",
       "field_error": {
-        "name": "Please enter your name",
-        "phone": "Enter at least 10 digits",
-        "telegram": "Use English characters without spaces",
-        "agreement": "Consent to data processing is required"
+        "name": "please enter your name",
+        "phone": "enter at least 10 digits",
+        "telegram": "please enter only Latin letters and numbers without spaces",
+        "agreement": "confirm consent"
       },
       "success": {
         "title": "Success!",
