--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -83,12 +83,12 @@
     "service_3": {
       "name1": "Создание",
       "name2": "Авторского контента",
-      "desc": "Тематический копирайтинг, <br \\/>фото- и видеовидео контент, <br \\/>ИИ-Контент"
+      "desc": "Тематический копирайтинг, <br \\/>фото- и видеоконтент, <br \\/>ИИ-Контент"
     },
     "service_4": {
       "name1": "Диджитал",
       "name2": "Консалтинг",
-      "desc": "Маркентинговая стратегия, <br \\/>автоматизация процессов, <br \\/>обучение сотрудников"
+      "desc": "Маркетинговая стратегия, <br \\/>автоматизация процессов, <br \\/>обучение сотрудников"
     },
     "team": {
       "name": "Присоединяйся <br \\/>к команде",
@@ -97,19 +97,19 @@
   },
   "partner": {
     "frame_1": {
-      "name": "Нас <br/><span class=\"text-primary\">рекомендуют</span>",
+      "name": "Нас <br/><span class=\"text-accent\">рекомендуют</span>",
       "desc": "Работаем как с крупными компаниями, <br \\/>так и со стартапами"
     },
     "frame_2": {
-      "name": "<span class=\"text-primary\">Комплексный</span><br/>подход",
+      "name": "<span class=\"text-accent\">Комплексный</span><br/>подход",
       "desc": "От стратегии и брендинга до лидогенерации <br \\/>и аналитики - мы закрываем полный цикл <br \\/>диджитал-маркетинга"
     },
     "frame_3": {
-      "name": "<span class=\"text-primary\">Максимальная <br/>вовлеченность</span><br/>в проект",
+      "name": "<span class=\"text-accent\">Максимальная <br/>вовлеченность</span><br/>в проект",
       "desc": "Полное погружение в тематику бизнеса <br \\/>для лучшей результативности"
     },
     "frame_4": {
-      "name": "<span class=\"text-primary\">Индивидуальные</span><br/>решения",
+      "name": "<span class=\"text-accent\">Индивидуальные</span><br/>решения",
       "desc": "Каждый проект уникален. <br \\/>Мы не используем шаблонные решения, <br \\/>а разрабатываем стратегию, которая <br \\/>будет работать именно для вашего бизнеса"
     }
   },
@@ -123,10 +123,10 @@
       "agreement": "ДАЮ СОГЛАСИЕ <br \\/>НА ОБРАБОТКУ ПЕРСОНАЛЬНЫХ ДАННЫХ",
       "send": "Отправить",
       "field_error": {
-        "name": "Укажите имя",
-        "phone": "Введите минимум 10 цифр",
-        "telegram": "Допускается английский текст без пробелов",
-        "agreement": "Необходимо согласие на условия обработки данных"
+        "name": "укажите имя",
+        "phone": "введите минимум 10 цифр",
+        "telegram": "вводите только латинские буквы и цифры без пробелов",
+        "agreement": "подтвердите согласие"
       },
       "success": {
         "title": "Успешно!",
