cases mobile > slider

--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -17,10 +17,10 @@
     "internet": "Интернет",
     "marketing": "Маркетинг",
     "for_your_business": "Для Вашего бизнеса и личного бренда",
-    "advertising_agency": "Мы оказываем <br \\/>премиальные услуги <br \\/>В области <br \\/>Digital-Маркетинга. <br \\/>С нами приятно работать <br \\/>И зарабатывать",
+    "advertising_agency": "Мы оказываем <br \\/>премиальные услуги <br \\/>В области <br \\/>Digital-Маркетинга. <br \\/>С нами приятно работать <br \\/>и зарабатывать",
     "about": {
       "name": "О нас",
-      "desc": "Мы - маркетинговое агентство полного цикла. <br \\/>Наша команда соединяет стратегию, креатив и аналитику, <br \\/>чтобы ваш бизнес развивался быстрее конкурентов. <br \\/>Мы понимаем рынок и говорим на языке цифр, <br \\/>а не обещаний"
+      "desc": "Мы - маркетинговое агентство полного цикла. <br \\/>Наша команда соединяет стратегию, креатив и аналитику, <br \\/>чтобы ваш бизнес развивался быстрее конкурентов. <br \\/>Мы понимаем рынок и говорим на языке цифр, а не обещаний"
     },
     "about_1": {
       "name": "В Digital-индустрии",
