--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -17,10 +17,10 @@
     "internet": "Internet",
     "marketing": "Marketing",
     "for_your_business": "For your business and personal brand",
-    "advertising_agency": "We provide <br \\/>premium services <br \\/>In the field <br \\/>of Digital-Marketing. <br \\/>It’s a pleasure <br \\/>to work with us <br \\/>And earn money",
+    "advertising_agency": "We provide <br \\/>premium services <br \\/>In the field <br \\/>of Digital-Marketing. <br \\/>It’s a pleasure <br \\/>to work with us <br \\/>and earn money",
     "about": {
       "name": "About us",
-      "desc": "We are - A full-service marketing agency. <br \\/>Our team combines strategy, creativity and analytics, <br \\/>to help your business grow faster than the competition. <br \\/>We understand the market and speak the language of numbers, <br \\/>not promises"
+      "desc": "We are - A full-service marketing agency. <br \\/>Our team combines strategy, creativity and analytics, <br \\/>to help your business grow faster than the competition. <br \\/>We understand the market and speak the language of numbers, not promises"
     },
     "about_1": {
       "name": "In the Digital-industry",
